kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: atpricetracker-service
spec:
  selector:
    app: atpricetracker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
